Fixed navigation issue on mobile

--- a/Sources/sass/styles.sass
+++ b/Sources/sass/styles.sass
@@ -50,6 +50,7 @@ h2
     -moz-backdrop-filter: blur(3rem)
     backdrop-filter: blur(3rem)
     overflow: hidden
+    overflow-x: auto
 
     top: 0
     left: 0
